Fix Issue#34 "dbdeployer fails with .mylogin.cnf"
dbdeployer fails when a valid .mylogin.cnf is found in the $HOME
directory. The failure is due to the way .mylogin.cnf is designed: it
bypasses --no-defaults and --defaults-file (really funny, MySQL team!)
The only known way of using --no-defaults or --defaults-file with
.mylogin.cnf is to define an impossible path for it using
MYSQL_TEST_LOGIN_FILE environment variable.
dbdeployer does that, and also all the sandbox files use the same
workaround.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+1.10.1	01-Sep-2018
+	- Fixed Issue#34 "dbdeployer fails when .mylogin.cnf is found"
 1.10.0	27-Aug-2018
 	- Fixed Issue#32 "Error log was not created in data directory"
 	- Added command 'dbdeployer admin upgrade sandbox1 sandbox2' (Issue#33)
