--- a/Changelog
+++ b/Changelog
@@ -3,12 +3,13 @@
 	- Fixed Issue #35 (--gtid should include relay-log-recovery)
 	- Fixed Issue #37 (slave initialization with GTID should use
 	  MASTER_AUTO_POSITION) and added test for GTID behavior.
+	- Some code refactoring: simplified exit procedure
 1.10.2	08-Sep-2018 (not released)
 	- Code cleanup and formatting
 	- Moved build script to ./scripts 
 	- Added option to build compressed executables (but defaults is still
 	  uncompressed)
-	- Added ./scripts/sanity_check to verify formatting and code complaint.
+	- Added ./scripts/sanity_check.sh to verify formatting and code complaint.
 1.10.1	01-Sep-2018
 	- Fixed Issue#34 "dbdeployer fails when .mylogin.cnf is found"
 1.10.0	27-Aug-2018
