--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,7 @@
 1.14.0	11-Nov-2018
 	Code readability improvements:
 	- Added function IsEnvSet
-	- Added variables for fetures minimum versions
+	- Added variables for features minimum versions
 	- Added constants for sandbox script names
 	- Added constants for most used error messages
 	- Added comparison functions for testing in a separate package
