--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+1.16.0	05-Jan-2019
+	- Add support for remote tarballs.
+	- New commands: "remote list" and "remote download"
 1.15.1	09-Dec-2018
 	Code improvements:
 	- Removed all unconditional output in reusable code (common, sandbox)
@@ -15,7 +18,6 @@
 	- Moved constants and many global variables from 'defaults' to new
 	  'globals' package. This reduce the risk of circular import between
 	  dbdeployer packages.
-
 1.14.0	11-Nov-2018
 	Code readability improvements:
 	- Added function IsEnvSet
