Fix Issue #48 MySQLx and group replication
Fix Issue #48 "can't enable mysqlx and group replication at the same time"

--- a/Changelog
+++ b/Changelog
@@ -5,7 +5,7 @@
 	- Added option --flavor
 	- Added flavor recording during unpack (Issue #52)
 	- Added command "dbdeployer admin capabilities [flavor [version]]"
-	- Added flavor detection based on files in expanded tarball
+	- Added flavor detection based on files in expanded tarball (Issue #53)
 
 	Code improvements:
 	- Version evaluation replaced by *capabilities*, i.e. flavor + version (Issue #50)
