--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+1.23.0	14-Mar-2019
+	NEW FEATURES:
+	- Add support for MySQL Cluster (topology=ndb)
 1.22.0	07-Mar-2019
 	ADJUSTMENTS:
 	Change default authentication plugin for MariaDB 10.4.3 (Issue #67)
