Add support for MySQL Cluster (NDB) (#71)
Add support for MySQL Cluster (NDB) As defined in Issue #20

Add option --ndb-nodes to replication
Every NDB node has a dedicated directory, separated from MySQL servers.
* Add tests for NDB cluster and PXC

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+1.23.0	14-Mar-2019
+	NEW FEATURES:
+	- Add support for MySQL Cluster (topology=ndb)
+	- Add option --ndb-nodes to replication
 1.22.0	07-Mar-2019
 	ADJUSTMENTS:
 	Change default authentication plugin for MariaDB 10.4.3 (Issue #67)
