--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+1.25.0	24-Mar-2019
+	ADJUSTMENTS/NEW FEATURES:
+	- Add option --enable-admin-address for 8.0.14+
+	- When admin address is enabled, ./use_admin is created for each sandbox
+	- multiple sandboxes have './ma', './sa1' './sa2', './na1', './na2'
+	  and 'use_all_admin'
 1.24.0	22-Mar-2019
 	NEW FEATURES:
 	- Add command "cookbook" with subcommands list, show, create
