--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+1.28.1	14-Apr-2019
+	BUGS FIXED
+	Add missing '$' in recipe skip-start-replication
 1.28.0	14-Apr-2019
 	NEW FEATURES
 	- Add option --sort-by=[name,flavor,script] to cookbook list
