--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+1.30.1	22-May-2019
+	BUGS FIXED
+	- Fix issue #80 NDB tarballs are wrongly labeled as regular "mysql" flavor
 1.30.0	05-May-2019
 	BUGS FIXED
 	- Fix Issue #72 Catalog operations can clash with multiple dbdeployer runs
