--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,16 @@
+1.31.0	22-May-2019
+	NEW FEATURES
+	- Add command 'downloads'
+	  - add subcommand 'downloads list'
+	  - add subcommand 'downloads get'
+	  - add subcommand 'downloads get-by-version'
+	  - add subcommand 'downloads import'
+	  - add subcommand 'downloads export'
+	  - add subcommand 'downloads reset'
+	DEPRECATION
+	The command 'remote' is deprecated with its subcommands
+	Its functionality is replaced by 'downloads', albeit with
+	a different syntax.
 1.30.1	22-May-2019
 	BUGS FIXED
 	- Fix issue #80 NDB tarballs are wrongly labeled as regular "mysql" flavor
